<resources>
    <string name="app_name">Sturbuzz Cofefe</string>
    <string name="text_hint">Enter email address</string>
    <string name="to_message">To:</string>
    <string name="send">Send message</string>
    <string name="name">Name</string>
    <string name="address">address</string>
    <string name="default_value">Default value</string>

    <string name="type_here">Type text here</string>
    <string name="encrypt">Encrypt text</string>
    <string name="decrypt">Decrypt text</string>


    <string-array name="main_menu">
        <item>Drinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>

    <string-array name="drinks">
        <item>cappuccino</item>
        <item>latte</item>
        <item>filter</item>
    </string-array>
    <string name="title_activity_top_level">TopLevelActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="type_the_password">Password here</string>

</resources>
