<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".DrinkCategoryActivity">

    <EditText
            android:id="@+id/edit_sending_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:autofillHints="@string/address"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/type_here"
            android:gravity="top|start"

            android:inputType="text" />



    <Button
            android:id="@+id/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:onClick="sendMessage"
            app:layout_constraintTop_toBottomOf="@id/edit_sending_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    <ListView

            android:id="@+id/forListAdapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/myButton"
            app:layout_constraintLeft_toLeftOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>
