<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context="com.example.myapplication.TopLevelActivity"
        android:orientation="horizontal">


    <TextView
            android:text="@string/to_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="14dp"
            android:textSize="18sp" />

    <EditText
            android:id="@+id/editText"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/text_hint"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
            android:hint="@string/address" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
            app:layout_constraintHorizontal_bias="0.497"
            android:hint="@string/app_name"
            android:gravity="left|top"
            app:layout_constraintBottom_toTopOf="@+id/button" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:text="@string/send"
            android:onClick="someMethod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2"
            android:autofillHints="@string/to_message"
            android:hint="@string/to_message"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

        <!--            xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--            xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--            xmlns:tools="http://schemas.android.com/tools"-->
